[package]
name = "jup"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.6.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0" 
jupiter-swap-api-client = "0.1.0"
spl-associated-token-account = "1.1.3"
spl-token = "3.5.0"
solana-program = "1.16"
solana-sdk = "1.16"
solana-client = "1.16"
bincode = "1.3"
async-trait = "0.1"